Css update to avoid bleeding on mobile devices

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -132,7 +132,7 @@ a:hover {
     opacity: 0;
     position: absolute;
     top: 74% ;
-    right:0px;
+    right:22px;
     white-space: nowrap;
     text-shadow: 0px 0px 5px #111;
     border-radius: 5px;
